--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
     <title>Malicia M. Canteño|Front-end - Developer</title>
-    <!-- <link rel="stylesheet" href="../css/bootstrap.min.css"> -->
   </head>
   <body>
       <header class="header">
@@ -19,296 +18,23 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
                 <ol class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#"><i class="fas fa-user"></i> Sobre mí</a>
+                        <a class="nav-link" href="#/home"><i class="fas fa-user"></i> Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fas fa-code"></i> Proyectos</a>
+                        <a class="nav-link" href="#/sobreMi"><i class="fas fa-user"></i> Sobre mí</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#"><i class="fas fa-phone-volume"></i> Contactame</a>
+                        <a class="nav-link" href="#/proyectos"><i class="fas fa-code"></i> Proyectos</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#/contactame"><i class="fas fa-phone-volume"></i> Contactame</a>
                   </li>
                 </ol>
             </div>
         </nav>        
       </header>
-    <section class="home">  
-      <div class="bd-example">
-          <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-              <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>     
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class ="imagen" src="../imagenes/imagenFondo3.png" alt="foto">
-                <div class="carousel-caption">
-                  <h1>¡Hola! me llamo Malicia Canteño y</h1>
-                  <div class = "welcome">
-                    <p>Soy front-end developer y</p>
-                    <ul class="ul"> 
-                      <li>me fascina el diseño web</li>
-                      <li>me encanta viajar</li>
-                      <li>amo los girasoles</li>
-                    </ul>
-                  </div>
-                  <div class= "button-one">
-                    <button type="button" class="btn btn-outline-danger">Algo más sobre mí <i class="fas fa-user"></i></button>
-                    <button type="button" class="btn btn-outline-warning">Descargar cv <i class="fas fa-angle-double-down"></i></button>
-                  </div>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img class ="imagen" src="../imagenes/imagenFondo7.png" alt="imagen-2">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5></h5>
-                  <p></p>
-                </div>
-                <div class="button-one">
-                  <button type="button" class="btn btn-outline-warning">Ver mis trabajos <i class="fas fa-angle-double-down"></i></button>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img class ="imagen" src="../imagenes/imagenFondo5.png" alt="imagen-3">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-                </div>
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-        </div>
-      </section>
-      <section class="sobre-mí">
-        <div class="title-name">
-          <p>SOBRE MÍ</p>
-          </div>
-          <hr class="linea-encabezado">
-          <div class="containers"> 
-          <div class="container">
-          <div class="element-one">    
- 
-          <img src="../imagenes/" class="photo" />
-            <h1 class="h1">Personalidad</h1>
-          <ul> 
-              <li type=square>Alegre</li>
-              <li type=square>Colaborativa</li>
-              <li type=square>Observadora</li>
-              <li type=square>Curiosa</li>
-            </ul>
-          <div> 
-            <h1 class="h1">RECONOCIMIENTOS</h1>
-            <div> 
-            <input type="checkbox" class="buttons" id="item1" name="acordeon">
-            <label for="item1" class="title"><i class="fas fa-chevron-right"></i> Perseverancia & pasión</li></label>
-            <p class="content">
-              Pin otorgado a la más perseverante y apasionada del proyecto 2 en Laboratoria.
-              El pin lo recibí en el proyecto 2 del common core al esforzarme y no darme por vencida
-              a pesar de lo difícil que era aprender los métodos de arrays y objetos para poder filtrar data de un archivo JSON,
-              culminando así con éxito el proyecto a tiempo</p>
-            </div>
-            <div> 
-            <input type="checkbox" class="buttons" id="item2" name="acordeon">
-            <label for="item2" class="title"><i class="fas fa-chevron-right"></i> Solidaridad con compañeras</li></label>
-            <p class="content">
-              Pin otorgado a la más solidaria con compañeras de trabajo del proyecto 1 en Laboratoria.
-              Este pin lo recibí en el proyecto 1 en el track de front-end developer al ayudar y apoyar 
-              a mis compañeras con los testeos de las funciones de la plataforma de firebase</p>
-            </div>
-            </div>
-          </div>
-        </div> 
-        <div class="container">
-         <span>
-        ¡Hola! mi nombre es Malicia, actualmente vivo en el Callao Lima-Peru soy front-end developer egresada de la 8 octaba promoción del bootcamp 
-        de Laboratoria.
-
-         </span> 
-         <br/>
-
-<span>
-  Actualmente busco formar parte de un equipo de emprendedores apasionados y determinados a cambiar el mundo
-  atraves de la tecnología y diseño.
-  Soy una persona super apasionada y comprometida con las metas u objetivos que tengo que cumplir y son algunas 
-  de las cosas que me caracterizan, pienso que adaptarme a una cultura en crecimiento, innovación tecnológica y 
-  y metodologías ágiles seria ideal, ya que fui capacitado para ello.
-</span>
-<br/>
-<span>
-Mi experiencia en Laboratoria fue maravilloso y estoy segura que con una laptop y conexión a internet 
-no hay algo que no se pueda aprender, hacer o crear. 
-</span>
-<br/>
-<br/>
-<h1 class="h1">INTERESES</h1>
-<span>
-  Me interesa mucho el diseño web, el voluntariado y el emprendimiento.
-<br/>
-Aparte me encanta viajar conocer nuevas culturas y costumbres, me fascina el girasol y compartir momentos 
-con familia y amigos.
-</span>
-</div>  
+<section id="log-container"></section>
   
- <div class="container">
-    <h1 class="h1">SKILL SET</h1>
-  <ul class="list"> 
-   <li type=square>React js <i class="fab fa-react"></i></li>
-   <li type=square>Node js <i class="fab fa-node"></i></li>
-   <li type=square>HTML5 <i class="fab fa-html5"></i></li>
-   <li type=square>CSS3 <i class="fab fa-css3"></i></li>
-    <li type=square>Javascript <i class="fab fa-js"></i></li>
-    <li type=square>Sass <i class="fab fa-sass"></i></li>
-    <li type=square>Firebase<i class="fas fa-database"></i></li>
-    <li type=square>Bootstrap 4 <i class="fas fa-bold"></i></li>
-    <li type=square>HTTP JSON <i class="fas fa-file-code"></i></li>
-    <li type=square>Scrum <i class="fas fa-table"></i></li>
-    <li type=square>npm <i class="fab fa-npm"></i></li>
-  </ul>
-  <h1 class="h1">TOOLS</h1>
-  <ul class="list">
-    <li type=square>Git <i class="fab fa-git"></i></li>
-    <li type=square>Git Hub <i class="fab fa-github"></i></li>
-    <li type=square>Adobe Ilustrator <i class="fab fa-adobe"></i></li>
-    <li type=square>Adobe Indesing <i class="fab fa-adobe"></i></li>
-    <li type=square>Figma <i class="fas fa-adjust"></i></li>
-  </ul>
-   </div>
-  </div>
-</section>
-<section class="work">
-<div class="title-work">
-  <p>PORTAFOLIO</p>
-</div>
-<hr class="linea-encabezado">
-<div class="container-cards">
-    <div class="card">
-        <div class="image">
-          <img src="http://1.bp.blogspot.com/-EhPr4LXcywE/Udr594sPHTI/AAAAAAAAAJ4/Tv4y4CBLTPM/s400/Cristina-Otero-2.jpg" class="card-imagen"/>
-        </div>
-        <div class="details">
-          <div class="center">
-            <h1 class="card-title">Someone famous<br><span class="card-span">team leader</span></h1>
-            <p class="card-text">Lorem ipsum is simple dummy text on the printing and typesetting industry.</p>
-            <ul class="card-list">
-              <li class="card-li"><button type="button" id="btn" class="btn btn-outline-secondary">Ver sitio web <i class="far fa-newspaper"></i></button></li>
-              <li class="card-li"><button type="button" id="btn" class="btn btn-outline-warning">Ver Git Hub <i class="fab fa-github"></i></button></li>              
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-          <div class="image">
-            <img src="http://1.bp.blogspot.com/-EhPr4LXcywE/Udr594sPHTI/AAAAAAAAAJ4/Tv4y4CBLTPM/s400/Cristina-Otero-2.jpg" class="card-imagen"/>
-          </div>
-          <div class="details">
-            <div class="center">
-              <h1 class="card-title">Someone famous<br><span class="card-span">team leader</span></h1>
-              <p class="card-text">Lorem ipsum is simple dummy text on the printing and typesetting industry.</p>
-              <ul class="card-list">
-                <li class="card-li"><button type="button" id="btn" class="btn btn-outline-secondary">Ver sitio web <i class="far fa-newspaper"></i></button></li>
-                <li class="card-li"><button type="button" id="btn" class="btn btn-outline-warning">Ver Git Hub <i class="fab fa-github"></i></button></li>              
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-        <div class="image">
-          <img src="http://1.bp.blogspot.com/-EhPr4LXcywE/Udr594sPHTI/AAAAAAAAAJ4/Tv4y4CBLTPM/s400/Cristina-Otero-2.jpg" class="card-imagen"/>
-        </div>
-        <div class="details">
-          <div class="center">
-            <h1 class="card-title">Someone famous<br><span class="card-span">team leader</span></h1>
-            <p class="card-text">Lorem ipsum is simple dummy text on the printing and typesetting industry.</p>
-            <ul class="card-list">
-              <li class="card-li"><button type="button" id="btn" class="btn btn-outline-secondary">Ver sitio web <i class="far fa-newspaper"></i></button></li>
-              <li class="card-li"><button type="button" id="btn" class="btn btn-outline-warning">Ver Git Hub <i class="fab fa-github"></i></button></li>              
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-          <div class="image">
-            <img src="http://1.bp.blogspot.com/-EhPr4LXcywE/Udr594sPHTI/AAAAAAAAAJ4/Tv4y4CBLTPM/s400/Cristina-Otero-2.jpg" class="card-imagen"/>
-          </div>
-          <div class="details">
-            <div class="center">
-              <h1 class="card-title">Someone famous<br><span class="card-span">team leader</span></h1>
-              <p class="card-text">Lorem ipsum is simple dummy text on the printing and typesetting industry.</p>
-              <ul class="card-list">
-                <li class="card-li"><button type="button" id="btn" class="btn btn-outline-secondary">Ver sitio web <i class="far fa-newspaper"></i></button></li>
-                <li class="card-li"><button type="button" id="btn" class="btn btn-outline-warning">Ver Git Hub <i class="fab fa-github"></i></button></li>              
-              </ul>
-            </div>
-          </div>
-        </div>
-    <div class="card">
-            <div class="image">
-              <img src="http://1.bp.blogspot.com/-EhPr4LXcywE/Udr594sPHTI/AAAAAAAAAJ4/Tv4y4CBLTPM/s400/Cristina-Otero-2.jpg" class="card-imagen"/>
-            </div>
-            <div class="details">
-              <div class="center">
-                <h1 class="card-title">Someone famous<br><span class="card-span">team leader</span></h1>
-                <p class="card-text">Lorem ipsum is simple dummy text on the printing and typesetting industry.</p>
-                <ul class="card-list">
-                  <li class="card-li"><button type="button" id="btn" class="btn btn-outline-secondary">Ver sitio web <i class="far fa-newspaper"></i></button></li>
-                  <li class="card-li"><button type="button" id="btn" class="btn btn-outline-warning">Ver Git Hub <i class="fab fa-github"></i></button></li>              
-                </ul>
-              </div>
-            </div>
-          </div>
-        <div class="card">
-              <div class="image">
-                <img src="http://1.bp.blogspot.com/-EhPr4LXcywE/Udr594sPHTI/AAAAAAAAAJ4/Tv4y4CBLTPM/s400/Cristina-Otero-2.jpg" class="card-imagen"/>
-              </div>
-              <div class="details">
-                <div class="center">
-                  <h1 class="card-title">Someone famous<br><span class="card-span">team leader</span></h1>
-                  <p class="card-text">Lorem ipsum is simple dummy text on the printing and typesetting industry.</p>
-                  <ul class="card-list">
-                    <li class="card-li"><button type="button" id="btn" class="btn btn-outline-secondary">Ver sitio web <i class="far fa-newspaper"></i></button></li>
-                    <li class="card-li"><button type="button" id="btn" class="btn btn-outline-warning">Ver Git Hub <i class="fab fa-github"></i></button></li>              
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-</section>
-<section class="contact">
-    <div class="title-contact">
-        <p>Contactame</p>
-      </div>
-      <hr class="linea-encabezado">
-<div class="container-contact">
-    <div class="contact-image">
-      <img src="../imagenes/llamada-telefonica (1).png" class="contact-img" />
-      <p class="number">+51 926-508-970</p>
-    </div>    
-  <div class="contact-image">
-    <img src="../imagenes/email.png" class="contact-img" />
-    <p class="number">cantenovictoriomaruja@gmail.com</p>
-  </div>
-</div>
-
-<div class="contact-title">
-  <span>También podemos conectar mediante redes sociales:</span>
-</div>
-  <div class="contact-list">
-   <img src="../imagenes/linkedin.png" />
-   <img src="../imagenes/logo-de-instagram.png" />
-   <img src="../imagenes/boton-del-logo-de-facebook.png" />
-   <img src="../imagenes/logo-de-github.png" />
-   <img src="../imagenes/boton-de-logo-del-twitter.png" />
- </div>
-
-</section>
 <footer class="page-footer font-small">
     <div class="footer-copyright text-center py-3">© 2019 Copyright: Malicia Canteño Victorio</div>  
 </footer>    
@@ -316,6 +42,6 @@ con familia y amigos.
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>    <script src="script.js"></script>
-    <script src= "script.js"></script>
+    <script type="module" src= "script.js"></script>
   </body>
 </html>
