--- a/src/index.html
+++ b/src/index.html
@@ -10,36 +10,36 @@
     <title>Malicia M. Canteño|Front-end - Developer</title>
   </head>
   <body>
-      <header class="header">
-          <nav class="mb-4 navbar navbar-expand-lg fixed-top">
-            <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4" aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
-                <ol class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#/home"><i class="fas fa-user"></i> Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#/sobreMi"><i class="fas fa-user"></i> Sobre mí</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#/proyectos"><i class="fas fa-code"></i> Proyectos</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#/contactame"><i class="fas fa-phone-volume"></i> Contactame</a>
-                  </li>
-                </ol>
-            </div>
-        </nav>        
-      </header>
-<section id="log-container"></section>
+    <header class="header">
+      <nav class="mb-4 navbar navbar-expand-lg fixed-top">
+        <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4" aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
+          <ol class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#/home"><i class="fas fa-home"></i> Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#/sobreMi"><i class="fas fa-user"></i> Sobre mí</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#/proyectos"><i class="fas fa-code"></i> Proyectos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#/contactame"><i class="fas fa-phone-volume"></i> Contactame</a>
+            </li>
+          </ol>
+        </div>
+      </nav>        
+    </header>
+    <section id="log-container"></section>
   
-<footer class="page-footer font-small">
-    <div class="footer-copyright text-center py-3">© 2019 Copyright: Malicia Canteño Victorio</div>  
-</footer>    
+    <footer class="page-footer font-small">
+      <div class="footer-copyright text-center py-3">© 2019 Copyright: Malicia Canteño Victorio</div>  
+    </footer>    
    
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>    <script src="script.js"></script>
     <script type="module" src= "script.js"></script>
