--- a/src/index.html
+++ b/src/index.html
@@ -17,17 +17,20 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
           <ol class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item ">
               <a class="nav-link" href="#/home"><i class="fas fa-home"></i> Home</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#/sobreMi"><i class="fas fa-user"></i> Sobre mí</a>
+            <li class="nav-item ">
+              <a class="nav-link" href="#/sobreMi"><i class="fas fa-user"></i> About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#/proyectos"><i class="fas fa-code"></i> Proyectos</a>
+              <a class="nav-link" href="#/skills"><i class="fas fa-code-branch"></i> Skills</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#/contactame"><i class="fas fa-phone-volume"></i> Contactame</a>
+              <a class="nav-link" href="#/proyectos"><i class="fas fa-code"></i> Works</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#/contactame"><i class="far fa-comment-dots"></i> Contact</a>
             </li>
           </ol>
         </div>
@@ -35,9 +38,10 @@
     </header>
     <section id="log-container"></section>
   
-    <footer class="page-footer font-small">
-      <div class="footer-copyright text-center py-3">© 2019 Copyright: Malicia'C</div>  
-    </footer>    
+    <footer class="page-footer font-small blue">
+      <div class="footer-copyright text-center py-3">© 2019 Copyright: Malicia Canteño
+      </div>    
+    </footer>
    
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
