--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
               <a class="nav-link" href="#/proyectos"><i class="fas fa-code"></i> Works</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#/contactame"><i class="far fa-comment-dots"></i> Contact</a>
+              <a class="nav-link" href="#/contactame"> Contact</a>
             </li>
           </ol>
         </div>
